<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/top_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gr.academic.city.mc.studentmanagement.MainActivity">

    <EditText
        android:id="@+id/txt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/txt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_first_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/txt_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_last_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/age"/>

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_age"
        android:text="@string/insert"/>

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_insert"
        android:text="@string/get_all"/>

    <Button
        android:id="@+id/btn_chose_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_query"
        android:text="@string/choose_color"/>

    <ListView
        android:id="@+id/lv_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_chose_color"/>
</RelativeLayout>
