<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gr.academic.city.mc.studentmanagement.ColorChooserActivity">

    <Button
        android:id="@+id/btn_submit_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/choose"/>

    <RadioGroup
        android:id="@+id/rg_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_submit_color"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/rb_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/red"/>

        <RadioButton
            android:id="@+id/rb_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green"/>

        <RadioButton
            android:id="@+id/rb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue"/>
    </RadioGroup>

</RelativeLayout>
