<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gr.academic.city.mc.studentmanagement.StudentDetailsActivity">

    <TextView
        android:id="@+id/tv_first_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/first_name"/>

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/tv_first_name_header"
        android:layout_toEndOf="@id/tv_first_name_header"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        tools:text="Ivo" />

    <TextView
        android:id="@+id/tv_last_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_first_name_header"
        android:text="@string/last_name"/>

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_first_name"
        android:layout_toRightOf="@id/tv_last_name_header"
        android:layout_toEndOf="@id/tv_last_name_header"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        tools:text="Neskovic" />

    <TextView
        android:id="@+id/tv_age_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_last_name_header"
        android:text="@string/age"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_last_name"
        android:layout_toRightOf="@id/tv_age_header"
        android:layout_toEndOf="@id/tv_age_header"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        tools:text="19" />

</RelativeLayout>